# mkdir2

./: .gitignore  CHANGELOG.md  Cargo.toml  Cargo.toml.bak  README.md
.github/workflows/: ci.yml  publish.yml  release.yml
src/: brace.rs  cli.rs  color.rs  main.rs  mkdir.rs  pathnorm.rs
tests/: integration.rs
