[package]
name = "mkdir2"
version = "0.1.6"
edition = "2021"
rust-version = "1.74"
authors = ["Hadi Cahyadi <cumulus13@gmail.com>"]
description = "A modern, cross-platform, production-ready replacement for mkdir: brace expansion, mixed `/`/`\\` path separators, safe force-recreate, colored + emoji output, JSON reports, dry-run and more."
homepage = "https://github.com/cumulus13/mkdir2"
repository = "https://github.com/cumulus13/mkdir2"
documentation = "https://docs.rs/mkdir2"
readme = "README.md"
license = "MIT"
keywords = ["mkdir", "cli", "filesystem", "directory", "brace-expansion"]
categories = ["command-line-utilities", "filesystem"]
exclude = [".github/*"]

[[bin]]
name = "mkdir2"
path = "src/main.rs"

[dependencies]
# clap is pinned below 4.5 because newer clap_lex releases require the
# edition2024 Cargo feature, which needs a newer toolchain than the
# rust-version (1.74) declared above.
clap = { version = "4", features = ["derive", "color", "wrap_help"] }
clap-version-flag = "1.0.7"
anyhow = "1"
colored = "2"
is-terminal = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# Same reasoning as clap above: newer tempfile pulls in a getrandom release
# that requires edition2024.
tempfile = "~3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
